<resources>
    <string name="app_name">PDF Converter &amp; Scanner</string>
    <string name="header_error_text">Oops…</string>
    <string name="error_text">Sorry…</string>
    <string name="close_text">Close</string>
    <string name="confirm_text">OK</string>
    <string name="understood_text">OK! Understood</string>
    <string name="loading_text">Loading…</string>
    <string name="loading_file_text">Loading files…</string>
    <string name="loading_locked_file_text">Finding password protected files…</string>
    <string name="download_not_success_text">Download not success…</string>
    <string name="download_success_text">Download success to Download folder</string>
    <string name="thank_you_text">Thank you</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="confirm_cancel_current_action">Are you sure to stop this action? This might interrupt your data sync.\n</string>
    <string name="confirm_override_file">This file is existed, do you want to override it?\n</string>
    <string name="confirm_exit_image_to_pdf">You will lose all changes for image, are you sure to exit?</string>
    <string name="sorry_text">Sorry</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="warning_text">Warning</string>
    <string name="download_text">Download</string>
    <string name="success_text">success</string>
    <string name="please_wait_text">Please wait a moment</string>
    <string name="please_input_name_text">Please input file name.</string>
    <string name="exit_text">Exit</string>
    <string name="downloading_text">Download</string>
    <string name="downloading_from_gg_drive_text">Loading from cloud server</string>
    <string name="loading_from_local_text">Loading from local file</string>
    <string name="not_now_text">Not now</string>
    <string name="agree_text">Agree</string>
    <string name="giant_permission_text">Giant permission</string>
    <string name="tip_text">Tap here to select images, text or \nexcel to convert into PDF.</string>
    <string name="searching_text">Search data…</string>
    <string name="search_text">Search</string>
    <string name="sort_text">Sort</string>
    <string name="search_file">Search file…</string>
    <string name="not_show_again_text">Not show again</string>
    <string name="save_fail_text">Saved fail!</string>
    <string name="preparing_data_text">Preparing data…</string>
    <string name="applying_data_text">Apply data…</string>
    <string name="guide_text">Select file guide</string>
    <string name="notice_text">Notice!</string>
    <string name="saving_text">Saving</string>
    <string name="saved_text">Saved!</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="cancelling_text">Cancelling…</string>
    <string name="retry_text">Retry</string>
    <string name="deleted_text">Deleted!</string>
    <string name="deleting_text">Deleting…</string>
    <string name="delete_success_text">Delete success…</string>
    <string name="delete_fail_text">Can not delete now…</string>
    <string name="loading_ads_text">Loading Ads</string>
    <string name="cancel_success_text">Cancel successful!</string>
    <string name="thankyou_text">Thank you</string>
    <string name="turn_off_success_text">Turn OFF successful!</string>
    <string name="system_data_issue_text">Can not complete this action. Please try again.</string>
    <string name="can_not_connect_to_network_text">Application can not connect to network.</string>
    <string name="toast_about_online_mode">Network reconnect. You are in online mode now.</string>
    <string name="connect_to_network_success_text">Connect to network successful.</string>
    <string name="function_not_support_text">This function is not supported now.</string>
    <string name="description_time_just_now">Just now</string>
    <string name="description_time_minute">minute</string>
    <string name="description_time_hour">hour</string>
    <string name="description_time_day">day</string>
    <string name="description_time_month">month</string>
    <string name="description_time_year">year</string>
    <string name="description_time_ago">ago</string>
    <string name="title_need_permission">Permission Request</string>
    <string name="title_need_permission_fail">Permission Request Fail</string>
    <string name="couldnt_get_file_now">Application could not get local file now. Please retry later.\n</string>
    <string name="reject_read_file">\nYou can accept this permission later.\n</string>
    <string name="couldnt_create_file_now">Application could not create file now. Please retry later.\n</string>
    <string name="need_permission_to_get_file">\nPDF Converter &amp; Scanner needs Manage External Storage permission to view and create files.\n</string>
    <string name="need_permission_to_create_file">PDF Converter &amp; Scanner needs Manage External Storage permission to create files.\n</string>
    <string name="get_file_now">Application will get local file right now.</string>
    <string name="thank_you_for_support">Thank you for your support.\n</string>
    <string name="create_file_now">Application will create file right now.</string>
    <string name="system_data_issue">Data is not valid. Please try again.</string>
    <string name="share_file_title">Share this file</string>
    <string name="pdf_type">application/pdf</string>
    <string name="txt_type">text/*</string>
    <string name="excel_type">text/*</string>
    <string name="word_type">text/*</string>
    <string name="image_type">image/*</string>
    <string name="share_chooser">Select app to send message…</string>
    <string name="guide_file_item">Hold to re-order</string>
    <string name="rate_us_title">Rate us</string>
    <string name="rate_us_content">If you enjoy, how about rating our app? It would be our happiness and honored. \nThank you for your support. \n</string>
    <string name="example_password">Password</string>
    <string name="example_re_enter_password">Retype password</string>
    <string name="example_page">Enter page number</string>
    <string name="enter_password_here">Please enter password</string>
    <string name="enter_old_password_here">Please enter old password</string>
    <string name="ad_attribution">Ad</string>
    <string name="no_file_found">No file found!</string>
    <string name="no_pdf_found">No PDF file found!</string>
    <string name="no_word_found">No text file found!</string>
    <string name="no_page_found">No page found!</string>
    <string name="no_txt_found">No Txt file found!</string>
    <string name="no_excel_found">No Excel file found!</string>
    <string name="output_file"><i>Output: </i></string>
    <string name="output_folder"><i>Folder: </i></string>
    <string name="can_not_open_folder">Can not open folder now.</string>
    <string name="can_not_open_file">Can not open file now.</string>
    <string name="can_not_select_file">Select file not successfully. Please choose file from Local storage or Google drive app only.</string>
    <string name="can_not_select_file_from_selector">Select file not successfully.</string>
    <string name="can_not_select_file_from_google_drive">Error while download file from Cloud server.</string>
    <string name="back_to_home">Back to home</string>
    <string name="recreate_pdf">Recreate pdf</string>
    <string name="view_file">View file</string>
    <string name="load_file_successfully">Loaded successfully</string>
    <string name="remove_password_now">Remove password</string>
    <string name="guide_to_select_multiple">\n\nLong touch to item to get multiple files.\n\n</string>
    <string name="loading_from_google_drive">Loading from cloud server. This may take a minute.</string>
    <string name="prefix_for_google_drive">File_from_cloud_server_</string>
    <string name="confirm_delete_file_title">Delete file</string>
    <string name="confirm_delete_file_message">Are you sure to delete this file permanently? You can NOT restore it later.\n</string>
    <string name="default_notification_channel_id">PDF Converter &amp; Scanner</string>
    <string name="accept_permission_file_selector">Accept storage permission</string>
    <string name="data_not_valid">Sorry. Data is not valid. We can\'t create pdf now.</string>
    <string name="done_create_pdf_title">Result</string>
    <string name="splitting_pdf_title">Splitting PDF…</string>
    <string name="split_pdf_fail_title">Split PDF fail</string>
    <string name="file_not_found">File is not exist</string>
    <string name="more_options">More Options</string>
    <string name="less_options">Minimize Options</string>
    <string name="word_file">Word</string>
    <string name="txt_file">Txt</string>
    <string name="excel_file">Excel</string>
    <string name="sort_not_available">Sort function is NOT available now.</string>
    <string name="create_file_success">Saved PDF file successfully!</string>
    <string name="create_txt_success">Saved TXT file successfully!</string>
    <string name="rate_before">You have already rated this application before.</string>
    <string name="full_detail_file" translatable="false">%s • %s</string>
    <string name="no_file_in_folder_found">Empty folder!</string>
    <string name="create_pdf_by_format">New formatted PDF</string>
    <string name="create_pdf_scan">Scan document</string>
    <string name="create_pdf_by_image">Create PDF by images</string>
    <string name="file_option_share">Share</string>
    <string name="file_option_upload">Upload</string>
    <string name="file_option_open">Open</string>
    <string name="file_option_print">Print</string>
    <string name="title_navigation_home">Home</string>
    <string name="title_navigation_lib">My File</string>
    <string name="title_navigation_bookmark">Bookmark</string>
    <string name="title_navigation_more">More</string>
    <string name="fragment_home_coming_soon">Coming soon!</string>
    <string name="convert_pdf">Convert PDF</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="word_to_pdf">Text to PDF</string>
    <string name="protect_pdf">Protect PDF</string>
    <string name="unlock_pdf">Unlock PDF</string>
    <string name="excel_to_pdf">Excel to PDF</string>
    <string name="add_water_mark">Add watermark</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_pdf_fast_swap_content">Enter two pages to swap</string>
    <string name="view_pdf_jump_to_page">Jump to page</string>
    <string name="view_pdf_jump_to_page_hint">Please enter page to jump</string>
    <string name="view_pdf_jump_to_page_number">Page number:</string>
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_tool">Tools</string>
    <string name="menu_drawer_browser">File Browser</string>
    <string name="menu_drawer_rate_us">Rate us</string>
    <string name="menu_drawer_feedback">Feedback</string>
    <string name="menu_drawer_share_app">Share App</string>
    <string name="menu_drawer_privacy">Privacy Policy</string>
    <string name="menu_drawer_more_app">More apps</string>
    <string name="import_font_size">Font size</string>
    <string name="import_font_family">Font family</string>
    <string name="font_style">Font style</string>
    <string name="watermark_position">Watermark position</string>
    <string name="rename_file_title">File name</string>
    <string name="rename_file_enter_name">Enter file name</string>
    <string name="from_page">From page</string>
    <string name="to_page">To page</string>
    <string name="edit_page_swap_pages">Swap pages</string>
    <string name="wm_text">Watermark text</string>
    <string name="wm_text_hint">Enter text</string>
    <string name="wm_angle">Watermark angle</string>
    <string name="wm_angle_hint">Enter watermark angle</string>
    <string name="color">Color</string>
</resources>