<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_dialog_common"
    android:layout_margin="16dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/title"
        style="@style/HuyCommonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/rename_file_title"
        android:textSize="@dimen/title_first_component_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_file_name_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/rename_file_enter_name"
        android:textSize="@dimen/title_third_component_text_size"
        android:scrollHorizontally="true"
        android:textColorHint="@color/button_background_secondary_25"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_file_name_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/HuyCommonButtonDialogLeftStyle"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/HuyCommonButtonDialogRightStyle"
            android:textAllCaps="true"
            android:text="@string/ok"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>