<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/bg_dialog_common">

    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/HuyCommonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/view_pdf_jump_to_page"
            android:textSize="@dimen/title_first_component_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question"
            style="@style/HuyCommonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_big"
            android:gravity="center"
            android:text="@string/view_pdf_jump_to_page_hint"
            android:textColor="@color/button_background_secondary_50"
            android:textSize="14sp" />

        <TextView
            style="@style/HuyCommonTextStyleImportProperties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="@dimen/common_margin_top_small"
            android:layout_marginEnd="36dp"
            android:text="@string/view_pdf_jump_to_page_number" />

        <EditText
            android:id="@+id/enter_page_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:inputType="number"
            android:textSize="@dimen/title_second_component_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_top_small"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input">

        <Button
            android:id="@+id/btn_no"
            style="@style/HuyCommonButtonDialogLeftStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel_text" />

        <Button
            android:id="@+id/btn_yes"
            style="@style/HuyCommonButtonDialogRightStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm_text"
            android:textAllCaps="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>